@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/contacts.php,v 1.17 2008/02/21 23:53:54 gerundt Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/contacts.php,v 1.18 2008/09/11 22:08:26 gerundt Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -10,10 +10,9 @@
  * did not receive this file, see http://www.fsf.org/copyleft/gpl.html.
  */
 
-require_once ('./utils/proxy.php');
-require_once ('./config/conf.php');
-require_once ('./utils/functions.php');
 require_once ('./common.php');
+require_once ('./utils/proxy.php');
+require_once ('./utils/functions.php');
 
 if(isset($charset))
   header ("Content-type: text/html; Charset=$charset");
